# sensor-fusion-engineer-nd

./: README.md
2d-feature-tracking/: CODEOWNERS  README.md
2d-feature-tracking/src/: MidTermProject_Camera_Student.cpp  dataStructures.h  matching2D.hpp  matching2D_Student.cpp
3d-object-tracking/: README.md
3d-object-tracking/src/: FinalProject_Camera.cpp  camFusion.hpp  camFusion_Student.cpp  matching2D.hpp  matching2D_Student.cpp  objectDetection2D.cpp  objectDetection2D.hpp
lidar-obstacle detection/: README.md
lidar-obstacle-detection/: CMakeLists.txt  README.md
lidar-obstacle-detection/src/: box.h  kdtree.h  main.cpp  point_cloud_processor.cpp  point_cloud_processor.h  render.cpp  render.h
radar-target-generation-and-detection/: project.m
unscented-kalman-filter/: README.md
unscented-kalman-filter/src/: highway.h  tools.cpp  ukf.cpp  ukf.h
